@@ -3,6 +3,7 @@ From version 0.5.11 to 0.5.12
   potential for global access, devices are purely local nodes.
 - local devices not "forwarded" in forward module.
 - device specific "profile" added.
+- admin profile level support.
 
 From version 0.5.10 to 0.5.11
 - pedantic fixes for strict aliasing and gcc 4.4.
